syntax = "proto3";

option java_package = "com.mmo.server";
option java_outer_classname = "ServerGateProtocol";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

enum LoginCode {
    OK = 0;
   	ERROR_PWD = 1;
}

message UserLoginRequest {
	string uname = 1;
	string upwd = 2;
}

message UserLoginResponse {
	LoginCode code = 1;
	string msAddr = 2;
	int64 port = 3;
}

service ServerGateService {
	rpc UserLogin (UserLoginRequest) returns (UserLoginResponse) {}
}